添加代码片段

--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
 			{
 				"language": "javascript",
 				"path": "./snippets/taro.json"
+			},
+			{
+				"language": "vue",
+				"path": "./snippets/taro.json"
 			}
 		],
 		"configuration": {
